changed the width of paragraph in banner section

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,7 @@ a, a:visited, a:hover {
     font-weight: 800;
 }
 .banner .banner-message .section-description {
+    width: 110px;
     margin: 32px 0;
 }
 .banner .banner-image {
